--- a/pipeline/buildspec.yml
+++ b/pipeline/buildspec.yml
@@ -7,9 +7,11 @@ phases:
   pre_build:
     commands:
       - pip install -r trending/requirements.txt
+      - pip install pylint
   build:
     commands:
-      - python -m pytest
+      - python setup.py test
+      - pylint -E src
 artifacts:
   files:
     - '**/*'
