--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       python: 3.7
   pre_build:
     commands:
-      - pip install -r trending/requirements.txt
+      - pip install -r requirements.txt
       - pip install pylint
   build:
     commands:
